--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -11,7 +11,7 @@
     font-weight: bold;
 }
 
-.class1, .class2 {
+.class1 {
     background-color: rgba(235,52,52,0.6);
     font-family: "Verdana", sans-serif;
 }
