Finished 02-flex-header excercises

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,14 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-links ul, .right-links ul {
+  display: flex;
+  gap: 20px;
 }
 
 .logo {
@@ -9,6 +17,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-items: center;
 }
 
 ul {
