--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display:flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0px 0px 0px 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  min-width: 300px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0px 0px 0px 16px;
+  gap: 10px;
+}
+
+.sidebar ul li {
+  padding-bottom: 15px;
+}
+
+.sidebar ul li a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 32px;
+  flex-wrap: wrap;
+  width: 300px;
+  margin: 32px;
+}
+
+.content {
+  display: flex;
+  flex:1;
+  
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
 }
